--- a/Delivery/delivery.html
+++ b/Delivery/delivery.html
@@ -18,12 +18,12 @@
                 <a href="/Main/main.html">
                     <img src="img/menu 1.svg" class="signMenu">
                     </a>
-                <a href="main.html">
+                <a href="../Main/main.html">
                 <img src="img/Logo.svg" class="logo">
                 </a>
                 <ul class="menu">
                     <li>
-                        <a href="/Main/main.html" class="Main">Главная</a>
+                        <a href="../Main/main.html" class="Main">Главная</a>
                     </li>
                     <li>
                         <a href="#">Каталог</a>
