--- a/Delivery/delivery.html
+++ b/Delivery/delivery.html
@@ -15,7 +15,7 @@
         <div class="container">
             
             <div class="nav">
-                <a href="/Main/main.html">
+                <a href="../Main/main.html">
                     <img src="img/menu 1.svg" class="signMenu">
                     </a>
                 <a href="../Main/main.html">
