--- a/Delivery/delivery.html
+++ b/Delivery/delivery.html
@@ -26,13 +26,13 @@
                         <a href="../Main/main.html" class="Main">Главная</a>
                     </li>
                     <li>
-                        <a href="#">Каталог</a>
+                        <a href="../Catalogue/catalogue.html">Каталог</a>
                     </li>
                     <li>
                         <a href="delivery.html" class="Delivery">Доставка</a>
                     </li>
                     <li>
-                        <a href="#" class="about">О нас</a>
+                        <a href="../About/about.html" class="about">О нас</a>
                     </li>
                     <li>
                         <a href="tel:+380503967521" class="tel">+8800-555-35-35</a>
