--- a/About/about.html
+++ b/About/about.html
@@ -56,13 +56,13 @@
     <section id="section1" class="section1">
         <div class="container">
             <div class="text2">
-                <p class="about2">Это я в июле на массе</p>
+                <p class="about2">Это я в июне на массе</p>
                 <img src="img/Лешик3.jpg" class="img2">
             </div>
 
             <div class="text3">
                 <img src="img/Лешик.jpg" class="img3">
-                <p class="about3">Чутка подсушился (июнь)</p>
+                <p class="about3">Чутка подсушился (июль)</p>
             </div>
         </div>
     </section>
