--- a/About/about.html
+++ b/About/about.html
@@ -55,6 +55,7 @@
 
     <section id="section1" class="section1">
         <div class="container">
+
             <div class="text2">
                 <p class="about2">Это я в июне на массе</p>
                 <img src="img/Лешик3.jpg" class="img2">
@@ -64,6 +65,22 @@
                 <img src="img/Лешик.jpg" class="img3">
                 <p class="about3">Чутка подсушился (июль)</p>
             </div>
+
+            <div class="text4">                
+                <p class="about4">Поступил в КПИ </p>
+                <img src="img/Лешик4.jpg" class="img4">
+            </div>
+
+            <div class="text5">            
+                <img src="img/Лешик5.jpg" class="img5">
+                <p class="about5">Полюбил сало</p>
+            </div>
+
+            <div class="text6">           
+                <p class="about5">Закончил первый курс</p>
+                <img src="img/Лешик6.jpg" class="img6">
+            </div>
+
         </div>
     </section>
 </body>
