--- a/About/about.html
+++ b/About/about.html
@@ -81,6 +81,11 @@
                 <img src="img/Лешик6.jpg" class="img6">
             </div>
 
+            <div class="text7">            
+                <img src="img/Лешик7.jpg" class="img7">
+                <p class="about7">Сам закрыл Владимирова</p>
+            </div>
+
         </div>
     </section>
 </body>
