--- a/About/about.html
+++ b/About/about.html
@@ -86,6 +86,10 @@
                 <p class="about7">Сам закрыл Владимирова</p>
             </div>
 
+            <div class="text8">           
+                <p class="about8">Получил права. Еду уважать, так сказать</p>
+                <img src="img/Лешик8.png" class="img8">
+            </div>
         </div>
     </section>
 </body>
