--- a/About/about.html
+++ b/About/about.html
@@ -77,7 +77,7 @@
             </div>
 
             <div class="text6">           
-                <p class="about5">Закончил первый курс</p>
+                <p class="about6">Закончил первый курс</p>
                 <img src="img/Лешик6.jpg" class="img6">
             </div>
 
@@ -90,6 +90,12 @@
                 <p class="about8">Получил права. Еду уважать, так сказать</p>
                 <img src="img/Лешик8.png" class="img8">
             </div>
+
+            <div class="text9">            
+                <img src="img/Лешик9.jpg" class="img9">
+                <p class="about9">А далее посмотрим...</p>
+            </div>
+
         </div>
     </section>
 </body>
