--- a/About/about.html
+++ b/About/about.html
@@ -87,7 +87,7 @@
             </div>
 
             <div class="text8">           
-                <p class="about8">Получил права</p>
+                <p class="about8">Получил права. Еду уважать, так сказать</p>
                 <img src="img/Лешик8.png" class="img8">
             </div>
 
