--- a/About/about.html
+++ b/About/about.html
@@ -45,8 +45,8 @@
                 <p class="about">О нас (я один здесь)</p>
                 
                 <div class="img1">
-                    <img src="img/Лешик2.jpg">
-                    <p class="about1">Как не сложно догадаться, этот красавчик - это Я</p>
+                    <img src="img/Богус.jpg">
+                    <p class="about1">Я то красавчик, но вот этот ЧОРТ чисто подрезал у меня сайт</p>
                 </div>
             </div>
     
