--- a/About/about.html
+++ b/About/about.html
@@ -45,7 +45,7 @@
                 <p class="about">О нас (я один здесь)</p>
                 
                 <div class="img1">
-                    <img src="img/Богус.jpg">
+                    <img src="img/Богус2.jpg" class="img1_1">
                     <p class="about1">Я то красавчик, но вот этот ЧОРТ чисто подрезал у меня сайт</p>
                 </div>
             </div>
