--- a/About/about.html
+++ b/About/about.html
@@ -45,8 +45,8 @@
                 <p class="about">О нас (я один здесь)</p>
                 
                 <div class="img1">
-                    <img src="img/Богус2.jpg" class="img1_1">
-                    <p class="about1">Я то красавчик, но вот этот ЧОРТ чисто подрезал у меня сайт</p>
+                    <img src="img/Лешик2.jpg">
+                    <p class="about1">Как не сложно догадаться, этот красавчик - это Я</p>
                 </div>
             </div>
     
@@ -87,7 +87,7 @@
             </div>
 
             <div class="text8">           
-                <p class="about8">Получил права</p>
+                <p class="about8">Получил права. Еду уважать, так сказать</p>
                 <img src="img/Лешик8.png" class="img8">
             </div>
 
