--- a/Catalogue/catalogue.html
+++ b/Catalogue/catalogue.html
@@ -15,9 +15,9 @@
         <div class="container">
             
             <div class="nav">
-                <a href="../Main/main.html">
-                    <img src="img/menu 1.svg" class="signMenu">
-                    </a>
+                <button class="signMenu" onclick="myFunction()">
+                    <img src="img/menu 1.svg">
+                </button>
                 <a href="../Main/main.html">
                 <img src="img/Logo.svg" class="logo">
                 </a>
@@ -40,6 +40,13 @@
                 </ul>
                 <img src="img/User.svg" class="user">
             </div>
+
+            <div id="myLinks" class="myLinks">
+                <a href="../Main/main.html">Главная</a>
+                <a href="catalogue.html">Каталог</a>
+                <a href="../Delivery/delivery.html">Доставка</a>
+                <a href="../About/about.html" class="about">О нас</a>
+              </div>
 
             <div class="text1">
                 <p class="Videocards">Видеокарты</p>
@@ -73,9 +80,9 @@
                 <img src="img/GPU 1.svg">
                 <img src="img/GPU 1.svg">
                 <img src="img/GPU 1.svg">
-
-
             </div>
         </div>
     </header>
+	<script src="../JS/menu.js"></script>
 </body>
+</html>
