--- a/About/about.html
+++ b/About/about.html
@@ -15,9 +15,9 @@
         <div class="container">
             
             <div class="nav">
-                <a href="../Main/main.html">
-                    <img src="img/menu 1.svg" class="signMenu">
-                    </a>
+                <button class="signMenu" onclick="myFunction()">
+                    <img src="img/menu 1.svg">
+                </button>
                 <a href="../Main/main.html">
                 <img src="img/Logo.svg" class="logo">
                 </a>
@@ -40,6 +40,13 @@
                 </ul>
                 <img src="img/User.svg" class="user">
             </div>
+            
+            <div id="myLinks" class="myLinks">
+                <a href="../Main/main.html">Главная</a>
+                <a href="../Catalogue/catalogue.html">Каталог</a>
+                <a href="../Delivery/delivery.html">Доставка</a>
+                <a href="about.html">О нас</a>
+              </div>
 
             <div class="text1">
                 <p class="about">О нас (я один здесь)</p>
@@ -98,4 +105,6 @@
 
         </div>
     </section>
+    <script src="../JS/menu.js"></script>
 </body>
+</html>
