--- a/Delivery/delivery.html
+++ b/Delivery/delivery.html
@@ -15,9 +15,9 @@
         <div class="container">
             
             <div class="nav">
-                <a href="../Main/main.html">
-                    <img src="img/menu 1.svg" class="signMenu">
-                    </a>
+                <button class="signMenu" onclick="myFunction()">
+                    <img src="img/menu 1.svg">
+                </button>
                 <a href="../Main/main.html">
                 <img src="img/Logo.svg" class="logo">
                 </a>
@@ -40,6 +40,13 @@
                 </ul>
                 <img src="img/User.svg" class="user">
             </div>
+
+            <div id="myLinks" class="myLinks">
+                <a href="../Main/main.html">Главная</a>
+                <a href="../Catalogue/catalogue.html">Каталог</a>
+                <a href="delivery.html">Доставка</a>
+                <a href="../About/about.html">О нас</a>
+              </div>
 
             <div class="delivery">
                 <div class="text1">
@@ -101,5 +108,8 @@
                      </div>
                  </div>
          </section>
+         <script src="../JS/menu.js"></script>
 </body>
+</html>
+
 
