--- a/About/about.html
+++ b/About/about.html
@@ -51,8 +51,8 @@
             <div class="text1">
                 <p class="about">О нас (я один здесь)</p>
                 
-                <div class="img1">
-                    <img src="img/Лешик2.jpg">
+                <div class="text1_1">
+                    <img src="img/Лешик2.jpg" class="img1">
                     <p class="about1">Как не сложно догадаться, этот красавчик - это Я</p>
                 </div>
             </div>
