--- a/About/about.html
+++ b/About/about.html
@@ -49,7 +49,7 @@
               </div>
 
             <div class="text1">
-                <p class="about">О нас (я один здесь)</p>
+                <p class="about">О нас</p>
                 
                 <div class="text1_1">
                     <img src="img/Лешик2.jpg" class="img1">
